resources/css/main.css
@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");

/* Variables */
:root {
    --bgMainColor: #24252a;
    --flexDirect: row;

    /* BG Code */
    --bgCodeLeftPlace: 1205px;
    --bgCodeTopPlace1: 975px;
    --bgCodeDisplay: inline;

    /* Home */
    --homeDisplay: flex;
    --homeSectionTop: 25vh;
    --homeTitleFontSize: 4vw;
    --homeTitleSubFontSize: 1.5vw;

    /* Skills */
    --skillsTitleTop: 500px;
    --skillsSectionTop: 600px;
    --skillsBoxTitleFontSize: 28px;
    --skillsWidth: 375px;
    --skillsHeight: 43px;
    --skillsFontSize: 18px;

    /* Portfolio */
    --portSectionTop: 1000px;
    --portTileWidth: 400px;
    --portLRMargin: 2vw;
    --portTBMargin: 4vw;
    --portWikiImgHeight: 326px;

    /* Contact */
    --contTitleTop: 1300px;
    --contSectionTop: 1400px;

    /* Social Links */
    --socialLRMargin: 30px;

    /* Footer */
    --footerTop: 1300px;
}

/*
 * Media Queries
 */
/* Large Screens */
@media(min-width: 1700px) {
    
    /* Overlap the title on the home image */
    #page-title {
        right: -150px;
    }

}


/* Medium Screens */
/*                                                          !FIX ME!
@media(min-width: 901px) and (max-width: 1700px) {

    /* Variables for BG Code Images */
    /*                                                      !FIX ME!
    :root {
        --bgCodeLeftPlace: 245px;
        --bgCodeTopPlace1: 1500px;
        --bgCodeDisplay: none;
    }
    
    /* Overlap the title on the home image */
    /*                                                      !FIX ME!
    #page-title {
        right: -150px;
    }
}   
*/

@media(min-width: 901px) and (max-width: 1030px) {

    /* Variables */
    :root {
        /* BG Code Images */
        --bgCodeDisplay: none;
        --bgCodeLeftPlace: 245px;
        --bgCodeTopPlace1: 1500px;
        
        /* Skills */
        /*
        --skillsWidth: ;
        --skillsHeight: ;
        --skillsFontSize: 18px;
        */
    }
    
    /* Overlap the title on the home image */
    #page-title {
        right: -105px;
    }

}


/* Small Screens */
@media(max-width: 900px) {

    /*
     * Variables 
     */
    :root {
        /* BG Code Images */
        --bgCodeDisplay: none;

        /* Home */
        --homeDisplay: inline;
        --homeTitleFontSize: 66px;
        --homeTitleSubFontSize: 22px;

        /* Skills */
        --flexDirect: column;
        --skillsTitleTop: 700px;
        --skillsSectionTop: 725px;
        --skillsWidth: 95%;
        --skillsHeight: 15%;
        --skillsFontSize: 14px;

        /* Portfolio */
        --portSectionTop: 935px;
        --portTileWidth: 85%;
        --portLRMargin: 0;
        --portTBMargin: 50px;
        --portWikiImgHeight: 250px;

        /* Contact */
        --contTitleTop: 1075px;
        --contSectionTop: 1130px;

        /* Social Links */
        --socialLRMargin: 20px;

        /* Footer */
        --footerTop: 1075px;
    }

    /* Remove navigation lines */
    #nav-lines {
        display: none;
    }

    /* Remove home image */
    #home-img {
        display: none;
    }
}

/* Set page margin and padding, fonts & background image */
body {
    margin: 0;
    padding: 0;
    max-width: 95vw;
    color: white;
    font-family: "Montserrat", sans-serif;
    background-image: url(../images/background.jpg);
}

/* 
 * Animations 
 */
@keyframes slideInFromTop {
    0% {
        transform: translateY(-200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-webkit-keyframes slideInFromTop {
    0% {
        transform: translateY(-200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-moz-keyframes slideInFromTop {
    0% {
        transform: translateY(-200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-o-keyframes slideInFromTop {
    0% {
        transform: translateY(-200%);
    }
    100% {
        transform: translateY(0);
    }
}

@keyframes slideInFromBottom {
    0% {
        transform: translateY(200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-webkit-keyframes slideInFromBottom {
    0% {
        transform: translateY(200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-moz-keyframes slideInFromBottom {
    0% {
        transform: translateY(200%);
    }
    100% {
        transform: translateY(0);
    }
}

@-o-keyframes slideInFromBottom {
    0% {
        transform: translateY(200%);
    }
    100% {
        transform: translateY(0);
    }
}

@keyframes slideInFromLeft {
    0% {
        transform: translateX(-500%);
    }
    100% {
        transform: translateX(0);
    }
}

@-webkit-keyframes slideInFromLeft {
    0% {
        transform: translateX(-500%);
    }
    100% {
        transform: translateX(0);
    }
}

@-moz-keyframes slideInFromLeft {
    0% {
        transform: translateX(-500%);
    }
    100% {
        transform: translateX(0);
    }
}

@-o-keyframes slideInFromLeft {
    0% {
        transform: translateX(-500%);
    }
    100% {
        transform: translateX(0);
    }
}

@keyframes grow {
    0% {
        width: 0;
    }
    100% {
        width: 50vw;
    }
}

@-webkit-keyframes grow {
    0% {
        width: 0;
    }
    100% {
        width: 50vw;
    }
}

@-moz-keyframes grow {
    0% {
        width: 0;
    }
    100% {
        width: 50vw;
    }
}

@-o-keyframes grow {
    0% {
        width: 0;
    }
    100% {
        width: 50vw;
    }
}

/* Animations for skills and tools */
.animation-element {
    position: relative;
}

.animation-element.slide-right {
    opacity: 0;

    -moz-transition: all 500ms linear;
    -webkit-transition: all 500ms linear;
    -o-transition: all 500ms linear;
    transition: all 500ms linear;

    -moz-transform: translate3d(-530px, 0px, 0px);
    -webkit-transform: translate3d(-530px, 0px, 0px);
    -o-transform: translate(-530px, 0px);
    -ms-transform: translate(-530px, 0px);
    transform: translate3d(-530px, 0px, 0px);
}
/* ... */

